About me & experience section added

--- a/style/customStyle.css
+++ b/style/customStyle.css
@@ -1,12 +1,4 @@
-﻿#navbar{
-background: rgba( 35, 39, 52, 0 );
-backdrop-filter: blur( 10px );
-}
-
-#dropdown{
-  background-color: rgb(48, 55, 78);
-}
-
+﻿/* Scroll bar */
 body::-webkit-scrollbar{
   width: 5px;
 }
@@ -20,7 +12,42 @@ body::-webkit-scrollbar-thumb:hover{
   background-color: #64ffda;
 }
 
-/* body::-webkit-scrollbar-track{
-  border: 2pc solid #fff;
-} */
+#navbar{
+background: rgba( 35, 39, 52, 0 );
+backdrop-filter: blur( 10px );
+}
 
+#dropdown{
+  background-color: rgb(48, 55, 78);
+  animation: fadeIn .5s;
+}
+
+#landing_section a{
+  transition: background-color 0.2s ease-in;
+}
+
+#landing_section a:hover{
+  background-color: rgba(100, 255, 218, .1);
+}
+
+.socials a:hover{
+  background-color: rgba(100, 255, 218, .1);
+  border-radius: 50%;
+}
+
+.card_article{
+  background-color: rgba(100, 255, 218, .03);
+}
+
+
+@keyframes fadeIn{
+  0%{
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+
+  100%{
+    opacity: 1;
+    transform: translate(0);
+  }
+}
