--- a/style/customStyle.css
+++ b/style/customStyle.css
@@ -1,53 +1,59 @@
 ﻿/* Scroll bar */
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   width: 5px;
 }
 
-body::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb {
   background-color: rgba(100, 255, 218, 0.6);
   border-radius: 10px;
 }
 
-body::-webkit-scrollbar-thumb:hover{
+body::-webkit-scrollbar-thumb:hover {
   background-color: #64ffda;
 }
 
-#navbar{
-background: rgba( 35, 39, 52, 0 );
-backdrop-filter: blur( 10px );
+#navbar {
+  background: rgb(35, 39, 52, 0.8);
+  backdrop-filter: blur(10px);
+  transition: 0.4s ease;
 }
 
-#dropdown{
+.navbar_scroll {
+  padding: 20px;
+  box-shadow: -1px -5px 15px 3px #80ffdb;
+}
+
+#dropdown {
   background: rgba(35, 39, 52);
-  backdrop-filter: blur( 10px );
-  animation: fadeIn .5s;
+  backdrop-filter: blur(10px);
+  animation: fadeIn 0.5s;
 }
 
-#landing_section #contact{
+#landing_section #contact {
   transition: background-color 0.2s ease-in;
 }
 
-#contact:hover{
-  background-color: rgba(100, 255, 218, .1);
+#contact:hover {
+  background-color: rgba(100, 255, 218, 0.1);
 }
 
-.socials a:hover{
-  background-color: rgba(100, 255, 218, .1);
+.socials a:hover {
+  background-color: rgba(100, 255, 218, 0.1);
   border-radius: 50%;
 }
 
-.card_article{
-  background-color: rgba(100, 255, 218, .03);
+.card_article {
+  /* background-color: rgba(100, 255, 218, 0.03); */
   /* background-color: rgb(35, 37, 51); */
   /* background-color: #171929; */
 }
 
-@keyframes fadeIn{
-  0%{
+@keyframes fadeIn {
+  0% {
     opacity: 0;
     transform: translateX(10rem);
   }
-  100%{
+  100% {
     opacity: 1;
     transform: translate(0);
   }
